--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css">
 </head>
 <body>
+  <nav>
+    <a href="#/content.md">目录</a>
+  </nav>
   <div id="app"></div>
   <script>
     window.$docsify = {
       name: '<span>大学笔记</span>',
       repo: '',
-      loadSidebar: true,
+      loadSidebar: 'content.md',
       subMaxLevel: 2,
+      coverpage: true,
+      onlyCover: false,
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
