--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     window.$docsify = {
       name: '<span>大学笔记</span>',
       repo: 'https://gitee.com/xsro/college-notes',
-      loadSidebar: 'content.md',
-      subMaxLevel: 4,
       coverpage: true,
       onlyCover: false,
       plugins: []
     };
   </script>
 
+  <!-- full text search https://docsify.js.org/#/plugins?id=full-text-search-->
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
   <!-- use gitee corner using https://github.com/Koooooo-7/docsify-corner -->
   <script>
     function corner(hook, vm) {
