--- a/index.html
+++ b/index.html
@@ -27,12 +27,16 @@
       repo: 'https://gitee.com/xsro/college-notes',
       coverpage: true,
       onlyCover: false,
-      plugins: []
+      plugins: [],
+      search: {
+        depth: 6
+      }
     };
   </script>
 
   <!-- full text search https://docsify.js.org/#/plugins?id=full-text-search-->
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+
   <!-- use gitee corner using https://github.com/Koooooo-7/docsify-corner -->
   <script>
     function corner(hook, vm) {
