:rocket: fix search use a not very good way

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta name="description" content="Description">
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css">
   <link rel="icon" href="https://portrait.gitee.com/uploads/avatars/user/2532/7597569_chenliucx_1599386104.png"
     type="image/x-icon" />
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/style.min.css"
@@ -20,7 +19,6 @@
     <a href="#/content.md">目录</a>
   </nav>
   <div id="app"></div>
-  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
   <script>
     window.$docsify = {
       name: '<span>大学笔记</span>',
@@ -28,13 +26,56 @@
       coverpage: true,
       onlyCover: false,
       plugins: [],
-      search: {
-        depth: 6
-      }
+
+      // complete configuration parameters
+      search: [
+        'content.md',
+        '大三上/matlab系统辨识概览.md',
+        '大三下/模式识别/README.md',
+        '大三下/模式识别/notes.md',
+        '大三下/模式识别/points.md',
+        '大三下/工程与社会/1第一讲 信息工程.md',
+        '大三下/工程与社会/2第二讲.md',
+        '大三下/工程与社会/8社会网络.md',
+        '大三下/工程与社会/8社会群体.md',
+        '大三下/工程与社会/README.md',
+        '大三下/工程与社会/ref.md',
+        '大三下/工程与社会/work.md',
+        '大三上/传感器技术/传感器提纲.md',
+        '大三上/传感器技术/传感器相关知识.md',
+        '大三下/运动控制系统/README.md',
+        '大三下/运动控制系统/points.md',
+        '大三上/电力电子技术/电力电子器件.md',
+        '大三上/电力电子技术/电力电子电路.md',
+        '大三上/职业发展规划/教育部举行新闻发布会.md',
+        '大三下/图像与视频处理/README.md',
+        '大三下/计算机控制系统/README.md',
+        '大三下/计算机控制系统/overview.md',
+        '大三下/图像与视频处理/points.md',
+        '大三下/计算机控制系统/points.md',
+        '大三下/图像与视频处理/points2.md',
+        '大三下/图像与视频处理/points3.md',
+        '大三上/单片机与嵌入式/复习课.md',
+        '大三上/单片机与嵌入式/实验二、80C51汇编语言编程实验.md',
+        '大三上/单片机与嵌入式/实验一、80C51存储器数据传输实验.md',
+        '大三上/电机与拖动基础/关于磁路的一些知识.md',
+        '大二下/概率论与数理统计/R2015b概率与数理统计/readme.md',
+        '大二下/概率论与数理统计/matlab实现/matlab实现.md',
+        '大二下/概率论与数理统计/readme.md',
+        '大二下/概率论与数理统计/概率论与数理统计/概率论.md',
+        '大二下/概率论与数理统计/概率论与数理统计/数理统计.md',
+        '大二下/电工电子基础实验A/考试信息.md',
+        '大二下/电工电子基础实验A/考试说明整理.md',
+        '大二下/马克思主义基本原理/马克思主义基本原理.md',
+        '大三下/毛泽东思想和中国特色社会主义理论体系概论/4社会主义建设道路初步探索的理论成果.md',
+        '大三下/毛泽东思想和中国特色社会主义理论体系概论/课堂提问记录.md',
+        '大三下/毛泽东思想和中国特色社会主义理论体系概论/《毛泽东思想和中国特色社会主义理论体系概论》教材.md',
+        '其他笔记/“老板“女朋友给的题目.md',
+      ]
     };
   </script>
-
-  <!-- full text search https://docsify.js.org/#/plugins?id=full-text-search-->
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+  <!-- full text search https://docsify.js.org/#/plugins?id=full-text-search -->
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
 
   <!-- use gitee corner using https://github.com/Koooooo-7/docsify-corner -->
