--- a/index.html
+++ b/index.html
@@ -163,9 +163,11 @@
             const prefix = document.location.pathname.endsWith('/') ? '' : '..';
             const markmapUrl = new URL(prefix + 'markmap.html', document.location);
             const markdownUrl = new URL(prefix + vm.route.file, document.location);
+            markmapUrl.searchParams.set("md",markdownUrl)
             mdstr = `[📝 EDIT](https://gitee.com/xsro/college-notes/edit/main/${vm.route.file})\t`
               + `[📚 VIEW](https://gitee.com/xsro/college-notes/blob/main/${vm.route.file})\t`
-              + `[🎇 MARKMAP](${markmapUrl}?md=${markdownUrl})\n` + mdstr;
+              + `[🎇 MARKMAP](${markmapUrl})\n` + mdstr;
+              
             return mdstr;
           }
         );
